--- a/index.html
+++ b/index.html
@@ -6,75 +6,122 @@
     <title>project1</title>
 </head>
 <body>
-    <h1>Cover Girl</h1>
-    <h3>Song by Rupaul</h3>
-    <p>Stroll down the runway<br>
-Another payday<br>
-Cover of magazines<br>
-And when they see me<br>
-They want to be me<br>
-I am your fantasy<br>
-
-Cover girl!<br>
-
-Put the bass in your walk<br>
-Head to toe let your whole body talk<br>
-(Cover Girl! Put your bass in your wak<br>
-Head-to-toe let your whole body talk)<br>
-
-To Grumman's Chinese, Red carpet tv<br>
-Valet my limousine<br>
-Box office sweetie, An Oscar nominee<br>
-Now watch me snatch trophies<br>
-
-Cover girl!<br>
-
-Put the bass in your walk<br>
-Head to toe let your whole body talk<br>
-(Cover Girl! Put your bass in your wak<br>
-Head-to-toe let your whole body talk)<br>
-
-Walk...now walk...walk....now walk (and what?)<br>
-Walk...now walk...walk....now walk<br>
-Come on Bebe, bring it<br>
-For Cameroon, bring it<br>
-
-Face(face), face(face), face(face), I get face<br>
-Beauty face you can take, it's ok<br>
-Watch my body go insane<br>
-Everyone keeps looking at me<br>
-You know I am Zahara B.<br>
-If u want to come for me and feel the need<br>
-Come right now and walk the beat!<br>
-
-Stroll down the runway<br>
-Another payday<br>
-Cover of magazines<br>
-And when they see me<br>
-They want to be me<br>
-I am the fantasy<br>
-
-Cover girl!<br>
-
-Put the bass in your walk<br>
-Head to toe let your whole body talk<br>
-(Cover Girl! Put your bass in your wak<br>
-Head-to-toe let your whole body talk)<br>
-
-Pump and bump it<br>
-Pump it and bump bump it<br>
-Pump pump it and bump bump it<br>
-Pump pump it and bump bump it<br>
-
-Cover girl!<br>
-
-Put the bass in your walk<br>
-Head to toe let your whole body talk<br>
-(Cover Girl! Put your bass in your wak<br>
-Head-to-toe let your whole body talk)<br>
-
-Walk...now walk...walk....now walk (and what?)<br>
-Walk...now walk...walk....now walk<br> </p>
+  <h1>Best songs lyrics in RUPaul Drag race </h1>
+  <div>
+    <h2>Cover Girl</h2>
+  <h3>Song by Rupaul</h3>
+  <p>Stroll down the runway, another payday
+    <br>
+     Cover of magazines
+     <br>
+     And when they see me, they wanna be me
+     <br>
+     I am the fantasy
+     <br>
+     <br>
+     Cover girl, put the bass in your walk
+     <br>
+     Head to toe, let your whole body talk
+     <br>
+     (Cover girl, put the bass in your walk)
+     <br>
+     (Head-to-toe, let your whole body talk)
+     <br>
+     <br>
+     To Grumman's Chinese, Red carpet TV
+     <br>
+     Valet my limousine
+     <br>
+     Box office sweetie, an Oscar nominee
+     <br>
+     Now watch me snatch trophies
+     <br>
+     <br>
+     Cover girl, put the bass in your walk
+     <br>
+     Head to toe, let your whole body talk
+     <br>
+     <br>
+     (Cover girl, put the bass in your walk)
+     <br>
+     (Head-to-toe, let your whole body talk)
+     <br>
+     <br>
+     Walk, now walk (uh-uh)
+     <br>
+     Walk, now walk (and what?)
+     <br>
+     Walk, now walk (uh-uh)
+     <br>
+     Walk, now walk (and what?)
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     <br>
+     Stroll down the runway, another payday
+     <br>
+     Cover of magazines
+     <br>
+     And when they see me, they wanna be me
+     <br>
+     I am the fantasy
+     <br>
+     <br>
+     Cover girl, put the bass in your walk
+     <br>
+     Head to toe, let your whole body talk
+     <br>
+     <br>
+     (Cover girl, put the bass in your walk)
+     <br>
+     (Head-to-toe, let your whole body talk)
+     <br>
+     <br>
+     Pump and bump it
+     <br>
+     Pump it and bump, bump it
+     <br>
+     Pump and bump it
+     <br>
+     Pump it and bump, bump it
+     <br>
+     Pump and bump it
+     <br>
+     Pump it and bump, bump it
+     <br>
+     Pump and bump it
+     <br>
+     Pump it and bump, bump it
+     <br>
+     <br>
+     Cover girl, put the bass in your walk
+     <br>
+     Head to toe, let your whole body talk
+     <br>
+     <br>
+     (Cover girl, put the bass in your walk)
+     <br>
+     (Head-to-toe, let your whole body talk)
+     <br>
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     Walk, now walk
+     <br>
+     <br>
+     (And what?)
+     </p>
+  </div>
 
 
 
